--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "@types/node": "^18.0.3",
     "typescript": "^4.7.4"
+  },
+  "scripts": {
+    "convert": "npx ts-node convert.ts"
   }
 }
